Add Gradle for api gateway

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,11 @@
 
 # archives
 *.zip
+
+# Kotlin and Gradle
+.gradle
+.kotlin
+build/
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**/build/
+!**/src/test/**/build/
