--- a/proxy/Dockerfile
+++ b/proxy/Dockerfile
@@ -1,6 +1,8 @@
 FROM nginx:stable-alpine3.17-slim
 
 COPY nginx.conf /etc/nginx/nginx.conf
+
+# Ignore undefined FROM alias - hadolint can't detect additional contexts
 # hadolint ignore=DL3022
 COPY --from=static html /data/www
 
@@ -11,8 +13,6 @@ RUN chown -R nginx:nginx /data && chmod -R 755 /data && \
 RUN touch /var/run/nginx.pid && \
         chown -R nginx:nginx /var/run/nginx.pid
 
-RUN apk add --no-cache curl=8.5.0-r0
-
 USER nginx
 
-HEALTHCHECK CMD curl --fail http://localhost:80 || exit 1
+HEALTHCHECK CMD wget -O - http://127.0.0.1:80 || exit 1
