--- a/compose.yaml
+++ b/compose.yaml
@@ -8,7 +8,7 @@ services:
       additional_contexts:
         - static=./static
     depends_on:
-      - dummy
+      - api-gateway
     develop: # To be removed before deployment
       watch:
         - path: ./static/html
@@ -18,7 +18,14 @@ services:
     image: 10.40.71.55:5000/rsww_184529_broker
     build:
       context: ./broker
-  dummy: # To be replaced by api gateway
-    image: nginx
+  api-gateway:
+    image: 10.40.71.55:5000/rsww_184529_api_gateway
+    build:
+      context: ./api_gateway
     depends_on:
-      - broker
+      broker:
+        condition: service_healthy
+    develop: # To be removed before deployment
+      watch:
+        - path: ./api_gateway
+          action: rebuild
