--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -2,8 +2,8 @@ events {
 
 }
 http {
-  upstream api_gateway {
-    server dummy:9000;
+  upstream api-gateway {
+    server api-gateway:8080;
   }
   server {
     listen 80;
@@ -11,7 +11,7 @@ http {
       root /data/www;
     }
     location /api {
-      proxy_pass http://api_gateway;
+      proxy_pass http://api-gateway;
     }
   }
 }
