--- a/.github/workflows/selenium_tests.yml
+++ b/.github/workflows/selenium_tests.yml
@@ -16,3 +16,15 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip  
+          if [ -f requirements.txt ]; then pip install -r functional_tests/requirements.txt; fi
+      - name: Install xvfb
+        run: sudo apt-get install xvfb
+      - name: Run docker
+        run: docker compose up --build -d
+      - name: Run functional tests
+        run: python -m pytest functional_tests/
+      - name: Shut down docker
+        run: docker compose down
