--- a/.github/workflows/selenium_tests.yml
+++ b/.github/workflows/selenium_tests.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip  
-          if [ -f requirements.txt ]; then pip install -r functional_tests/requirements.txt; fi
+          pip install -r functional_tests/requirements.txt
       - name: Install xvfb
         run: sudo apt-get install xvfb
       - name: Run docker
