--- a/broker/Dockerfile
+++ b/broker/Dockerfile
@@ -4,4 +4,6 @@ FROM rabbitmq:3.13-management-alpine
 #
 # COPY rabbitmq.conf /etc/rabbitmq/rabbitmq.conf
 
+USER rabbitmq
+
 HEALTHCHECK --interval=3s CMD rabbitmq-diagnostics -q ping || exit 1
