--- a/api_gateway/Dockerfile
+++ b/api_gateway/Dockerfile
@@ -1,16 +1,24 @@
+# build stage
 FROM eclipse-temurin:21-jdk-alpine as build
 WORKDIR /workspace/app
 
 COPY . /workspace/app
 RUN --mount=type=cache,target=/root/.gradle ./gradlew clean build
-RUN mkdir -p build/dependency && (cd build/dependency; jar -xf ../libs/*-SNAPSHOT.jar)
+WORKDIR /workspace/app/build/dependency
+RUN jar -xf ../libs/*-SNAPSHOT.jar
 
+# actual application image
 FROM eclipse-temurin:21-jdk-alpine
 VOLUME /tmp
 ARG DEPENDENCY=/workspace/app/build/dependency
+
+RUN addgroup java && adduser -SG java java
+USER java
 
 COPY --from=build ${DEPENDENCY}/BOOT-INF/lib /app/lib
 COPY --from=build ${DEPENDENCY}/META-INF /app/META-INF
 COPY --from=build ${DEPENDENCY}/BOOT-INF/classes /app
 
-ENTRYPOINT ["java", "-cp", "app:app/lib/*", "pl.edu.pg.rsww.api_gateway.ApiGatewayApplicationKt"]
+ENTRYPOINT ["java", "-cp", "app:app/lib/*", "pl.edu.pg.rsww.apigateway.ApiGatewayApplicationKt"]
+
+HEALTHCHECK CMD wget -O - http://127.0.0.1:8080/health || exit 1
