--- a/compose.yaml
+++ b/compose.yaml
@@ -43,3 +43,9 @@ services:
         context: ./transports
     env_file:
       - ./default.env
+  tour-offers:
+    image: 10.40.71.55.5000/rsww_184529_tour_offers
+    build:
+        context: ./tour_offers
+    env_file:
+      - ./default.env
