--- a/tour_offers/src/main/resources/application.properties
+++ b/tour_offers/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-spring.application.name=tour_offers
+spring.application.name=tour_offers_service
+app.queue.base=tour_offers
+
+spring.rabbitmq.host=broker
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.publisher-confirm-type=correlated
+spring.rabbitmq.publisher-returns=true
