Use Prettier instead of JS Standard and reformat accordingly

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -27,3 +27,4 @@ jobs:
           VALIDATE_HTML: false # HtmlHint does not allow to selectively ignore the rules
           DEFAULT_BRANCH: origin/main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          JAVASCRIPT_DEFAULT_STYLE: prettier
