Fix usage of too recent Docker Compose features

--- a/compose.yaml
+++ b/compose.yaml
@@ -23,11 +23,7 @@ services:
     build:
       context: ./api_gateway
     env_file:
-      - path: ./default.env
-        required: true
-      # allow setting up non-default credentials
-      - path: ./production.env
-        required: false
+      - ./default.env
     depends_on:
       broker:
         condition: service_healthy
