Ignore hadolint's issues with additional_contexts

--- a/db_mongo/Dockerfile
+++ b/db_mongo/Dockerfile
@@ -7,6 +7,8 @@ ENV MONGO_INITDB_DATABASE=rsww_184529
 ENV MONGO_INITDB_ROOT_USERNAME=root
 ENV MONGO_INITDB_ROOT_PASSWORD=student
 
+# Ignore undefined FROM alias - hadolint can't detect additional contexts
+# hadolint ignore=DL3022
 COPY --from=db_scripts * /docker-entrypoint-initdb.d/
 
 HEALTHCHECK CMD \
