--- a/db_sql/Dockerfile
+++ b/db_sql/Dockerfile
@@ -8,10 +8,17 @@ ENV POSTGRES_PASSWORD=student
 
 # copy all files except for `00_*.sql`
 # could be handled by `COPY --exclude` but it's not stable syntax yet
+#
+# Ignore undefined FROM alias - hadolint can't detect additional contexts
+# hadolint ignore=DL3022
 COPY --from=db_scripts 0[1-9]_*.sql /docker-entrypoint-initdb.d/
+# hadolint ignore=DL3022
 COPY --from=db_scripts [1-9][0-9]_*.sql /docker-entrypoint-initdb.d/
 
 # copy samples
+#
+# Ignore undefined FROM alias - hadolint can't detect additional contexts
+# hadolint ignore=DL3022
 COPY --from=db_scripts 50_sample[s]/*.sql /docker-entrypoint-initdb.d/
 
 HEALTHCHECK CMD pg_isready || exit 1
