--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -18,6 +18,8 @@ jobs:
           # Full git history is needed to get a proper
           # list of changed files within `super-linter`
           fetch-depth: 0
+          token: ${{ secrets.GH_CLONE_TOKEN }}
+          submodules: true
       - name: Lint Code Base
         uses: super-linter/super-linter@v6.3.1
         env:
