--- a/.github/workflows/selenium_tests.yml
+++ b/.github/workflows/selenium_tests.yml
@@ -16,6 +16,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          token: ${{ secrets.GH_CLONE_TOKEN }}
+          submodules: true
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip  
