--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -25,6 +25,7 @@ jobs:
           FILTER_REGEX_EXCLUDE: ".*/gradlew"
           VALIDATE_PYTHON_PYLINT: false
           VALIDATE_HTML: false # HtmlHint does not allow to selectively ignore the rules
+          VALIDATE_ANSIBLE: false # super-linter thinks we have playbooks here but later fails because we don't
           DEFAULT_BRANCH: origin/main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           JAVASCRIPT_DEFAULT_STYLE: prettier
