--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,6 @@
 services:
   proxy:
-    image: 10.40.71.55:5000/rsww_184529_proxy
+    image: ghcr.io/yetanotherspieskowcy/rsww_184529_proxy
     ports:
       - "8080:80"
     build: 
@@ -8,11 +8,11 @@ services:
       additional_contexts:
         - static=./static
   broker:
-    image: 10.40.71.55:5000/rsww_184529_broker
+    image: ghcr.io/yetanotherspieskowcy/rsww_184529_broker
     build:
       context: ./broker
   api-gateway:
-    image: 10.40.71.55:5000/rsww_184529_api_gateway
+    image: ghcr.io/yetanotherspieskowcy/rsww_184529_api_gateway
     build:
       context: ./api_gateway
     env_file:
