--- a/tour_operator/src/main/resources/application.properties
+++ b/tour_operator/src/main/resources/application.properties
@@ -1,7 +1,5 @@
-# comma-separated list of services
-serviceQueues=tour_operator
-
-spring.application.name=api_gateway
+spring.application.name=tour_operator
+app.queue.base=tour_operator
 
 spring.rabbitmq.host=broker
 spring.rabbitmq.port=5672
