--- a/price_calculator/Dockerfile
+++ b/price_calculator/Dockerfile
@@ -2,7 +2,7 @@ FROM eclipse-temurin:21-jdk-alpine as build
 WORKDIR /workspace/app
 
 COPY . /workspace/app
-RUN --mount=type=cache,target=/root/.gradle ./gradlew clean build --scan
+RUN --mount=type=cache,target=/root/.gradle ./gradlew clean build
 RUN mkdir -p build/dependency && (cd build/dependency; jar -xf ../libs/*-SNAPSHOT.jar)
 
 FROM eclipse-temurin:21-jdk-alpine
