--- a/tour_operator/Dockerfile
+++ b/tour_operator/Dockerfile
@@ -17,6 +17,6 @@ COPY --from=build ${DEPENDENCY}/BOOT-INF/lib /app/lib
 COPY --from=build ${DEPENDENCY}/META-INF /app/META-INF
 COPY --from=build ${DEPENDENCY}/BOOT-INF/classes /app
 
-ENTRYPOINT ["java", "-cp", "app:app/lib/*", "pl.edu.pg.rsww.tour_operator.TourOperatorApplicationKt"]
+ENTRYPOINT ["java", "-cp", "app:app/lib/*", "pl.edu.pg.rsww.touroperator.TourOperatorApplicationKt"]
 
 HEALTHCHECK CMD exit 0
