--- a/price_calculator/Dockerfile
+++ b/price_calculator/Dockerfile
@@ -3,14 +3,20 @@ WORKDIR /workspace/app
 
 COPY . /workspace/app
 RUN --mount=type=cache,target=/root/.gradle ./gradlew clean build
-RUN mkdir -p build/dependency && (cd build/dependency; jar -xf ../libs/*-SNAPSHOT.jar)
+WORKDIR /workspace/app/build/dependency
+RUN jar -xf ../libs/*-SNAPSHOT.jar
 
 FROM eclipse-temurin:21-jdk-alpine
 VOLUME /tmp
 ARG DEPENDENCY=/workspace/app/build/dependency
 
+RUN addgroup java && adduser -SG java java
+USER java
+
 COPY --from=build ${DEPENDENCY}/BOOT-INF/lib /app/lib
 COPY --from=build ${DEPENDENCY}/META-INF /app/META-INF
 COPY --from=build ${DEPENDENCY}/BOOT-INF/classes /app
 
-ENTRYPOINT ["java", "-cp", "app:app/lib/*", "pl.edu.pg.rsww.price_calculator.PriceCalculatorApplicationKt"]
+ENTRYPOINT ["java", "-cp", "app:app/lib/*", "pl.edu.pg.rsww.pricecalculator.PriceCalculatorApplicationKt"]
+
+HEALTHCHECK CMD exit 0
