Apply suggestions from code review
Co-authored-by: Jakub Kuczys <me@jacken.men>

--- a/price_calculator/src/main/resources/application.properties
+++ b/price_calculator/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=price_calculator_service
+spring.application.name=price_calculator
 app.queue.base=price_calculator
 
 spring.rabbitmq.host=broker
