--- a/compose.yaml
+++ b/compose.yaml
@@ -21,8 +21,8 @@ services:
     image: 10.40.71.55:5000/rsww_184529_tour_operator
     build:
         context: ./tour_operator
-  price_calculator:
-    image: 10.40.71.55.5000/rsww_184529_price_calculator
+  price-calculator:
+    image: 10.40.71.55:5000/rsww_184529_price_calculator
     build:
       context: ./price_calculator
     depends_on:
