Add DB config for local dev and SQL scripts (#28)
* Add DB config for local dev and SQL scripts with schemas

* Use Prettier instead of JS Standard and reformat accordingly

* Reorder env file

* Fix usage of too recent Docker Compose features

* Reformat SQL

* Ignore hadolint's issues with additional_contexts

* Add bash script for filling with data

* Change schemas

* Add submodules with samples

* Appease weird shell style guide

* Fix SQL

* Enable submodule cloning in GH Actions

* Fix formatting, properly this time

* Fix schema

* Fix formatting, for the last time...

GH Actions diff lied to me - it wanted me to change spaces to tabs
but the logs contained a single space...

* Remove clone in workflows that do not need it

* Remove data initialization from dev-only DB images

* Remove non-default DB creation from docker files

* Fix path

* linter

* Disable Ansible linter

* Remove interactive flag from the filling script

* Containerize db scripts

* Move dev things out of compose.yaml

* Add a make file

* lint fixes

* Review fixes

* update usage in actions workflow

--- a/.github/workflows/selenium_tests.yml
+++ b/.github/workflows/selenium_tests.yml
@@ -16,6 +16,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          token: ${{ secrets.GH_CLONE_TOKEN }}
+          submodules: true
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip  
@@ -23,7 +25,9 @@ jobs:
       - name: Install xvfb
         run: sudo apt-get install xvfb
       - name: Run docker
-        run: docker compose up --build -d
+        run: make dev-up-daemon
+      - name: Fill DB with sample data
+        run: make dev-fill-db
       - name: Run functional tests
         run: python -m pytest functional_tests/
       - name: Shut down docker
