Price calculator service (#31)
* initial project

* added calculating tour price

* removed --scan

* added permission

* added function call and linter fix

* added all files

* linter fix

* Apply suggestions from code review

Co-authored-by: Jakub Kuczys <me@jacken.men>

* applied requested changes

* changed crlf to lf

* review fix

---------

Co-authored-by: Jakub Kuczys <me@jacken.men>

--- a/price_calculator/src/main/resources/application.properties
+++ b/price_calculator/src/main/resources/application.properties
@@ -1,7 +1,5 @@
-# comma-separated list of services
-serviceQueues=price_calculator
-
-spring.application.name=api_gateway
+spring.application.name=price_calculator
+app.queue.base=price_calculator
 
 spring.rabbitmq.host=broker
 spring.rabbitmq.port=5672
