--- a/compose.yaml
+++ b/compose.yaml
@@ -21,3 +21,10 @@ services:
     image: 10.40.71.55:5000/rsww_184529_tour_operator
     build:
         context: ./tour_operator
+  price-calculator:
+    image: 10.40.71.55:5000/rsww_184529_price_calculator
+    build:
+      context: ./price_calculator
+    depends_on:
+      broker:
+        condition: service_healthy
