--- a/compose.yaml
+++ b/compose.yaml
@@ -18,11 +18,11 @@ services:
     env_file:
       - ./default.env
   tour-operator:
-    image: 10.40.71.55:5000/rsww_184529_tour_operator
+    image: ghcr.io/yetanotherspieskowcy/rsww_184529_tour_operator
     build:
         context: ./tour_operator
   price-calculator:
-    image: 10.40.71.55:5000/rsww_184529_price_calculator
+    image: ghcr.io/yetanotherspieskowcy/rsww_184529_price_calculator
     build:
       context: ./price_calculator
     depends_on:
