--- a/auth/src/main/resources/application.properties
+++ b/auth/src/main/resources/application.properties
@@ -1,7 +1,5 @@
-# comma-separated list of services
-serviceQueues=price_calculator, auth
-
-spring.application.name=api_gateway
+spring.application.name=auth
+app.queue.base=auth
 
 spring.rabbitmq.host=broker
 spring.rabbitmq.port=5672
