updated PriceCalculator and added counting records in db

--- a/tour_offers/src/main/resources/application.properties
+++ b/tour_offers/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=tour_offers_service
+spring.application.name=tour_offers
 app.queue.base=tour_offers
 
 spring.rabbitmq.host=broker
