--- a/.github/workflows/selenium_tests.yml
+++ b/.github/workflows/selenium_tests.yml
@@ -23,7 +23,7 @@ jobs:
           python -m pip install --upgrade pip  
           pip install -r functional_tests/requirements.txt
       - name: Install xvfb
-        run: sudo apt-get install xvfb firefox
+        run: sudo apt-get install xvfb
       - name: Run docker
         run: make dev-up-daemon
       - name: Fill DB with sample data
