--- a/trip_reservations/src/main/resources/application.properties
+++ b/trip_reservations/src/main/resources/application.properties
@@ -1,7 +1,5 @@
-# comma-separated list of services
-serviceQueues=price_calculator,trip_reservations
-
-spring.application.name=api_gateway
+spring.application.name=trip_reservations
+app.queue.base=trip_reservations
 
 spring.rabbitmq.host=broker
 spring.rabbitmq.port=5672
