--- a/compose.yaml
+++ b/compose.yaml
@@ -44,7 +44,7 @@ services:
     env_file:
       - ./default.env
   tour-offers:
-    image: 10.40.71.55.5000/rsww_184529_tour_offers
+    image: ghcr.io/yetanotherspieskowcy/rsww_184529_tour_offers
     build:
         context: ./tour_offers
     env_file:
