--- a/dev.env
+++ b/dev.env
@@ -1,5 +1,7 @@
 POSTGRES_HOST=localhost
+POSTGRES_HOSTB=db-sql
 POSTGRES_PORT=15432
+POSTGRES_PORTB=5432
 
 MONGO_HOST=localhost
 MONGO_HOSTB=db-mongo
