--- a/price_calculator/src/main/resources/application.properties
+++ b/price_calculator/src/main/resources/application.properties
@@ -5,5 +5,6 @@ spring.rabbitmq.host=broker
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+spring.rabbitmq.listener.default-requeue-rejected=false
 spring.rabbitmq.publisher-confirm-type=correlated
 spring.rabbitmq.publisher-returns=true
