--- a/transports/src/main/resources/application.properties
+++ b/transports/src/main/resources/application.properties
@@ -1,7 +1,5 @@
-# comma-separated list of services
-serviceQueues=price_calculator,trip_reservations,auth
-
-spring.application.name=api_gateway
+spring.application.name=transports
+app.queue.base=transports
 
 spring.rabbitmq.host=broker
 spring.rabbitmq.port=5672
@@ -9,4 +7,3 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 spring.rabbitmq.publisher-confirm-type=correlated
 spring.rabbitmq.publisher-returns=true
-spring.rabbitmq.template.reply-timeout=30000
