--- a/compose.yaml
+++ b/compose.yaml
@@ -21,6 +21,12 @@ services:
     image: ghcr.io/yetanotherspieskowcy/rsww_184529_tour_operator
     build:
         context: ./tour_operator
+  trip-reservations:
+    image: ghcr.io/yetanotherspieskowcy/rsww_184529_trip_reservations
+    build:
+        context: ./trip_reservations
+    env_file:
+      - ./default.env
   price-calculator:
     image: ghcr.io/yetanotherspieskowcy/rsww_184529_price_calculator
     build:
@@ -29,5 +35,11 @@ services:
     image: ghcr.io/yetanotherspieskowcy/rsww_184529_auth
     build:
       context: ./auth
+    env_file:
+      - ./default.env
+  transports:
+    image: ghcr.io/yetanotherspieskowcy/rsww_184529_transports
+    build:
+        context: ./transports
     env_file:
       - ./default.env
