--- a/trip_reservations/Dockerfile
+++ b/trip_reservations/Dockerfile
@@ -1,4 +1,3 @@
-# build stage
 FROM eclipse-temurin:21-jdk-alpine as build
 WORKDIR /workspace/app
 
@@ -7,7 +6,6 @@ RUN --mount=type=cache,target=/root/.gradle,sharing=locked ./gradlew clean build
 WORKDIR /workspace/app/build/dependency
 RUN jar -xf ../libs/*-SNAPSHOT.jar
 
-# actual application image
 FROM eclipse-temurin:21-jdk-alpine
 VOLUME /tmp
 ARG DEPENDENCY=/workspace/app/build/dependency
@@ -19,6 +17,6 @@ COPY --from=build ${DEPENDENCY}/BOOT-INF/lib /app/lib
 COPY --from=build ${DEPENDENCY}/META-INF /app/META-INF
 COPY --from=build ${DEPENDENCY}/BOOT-INF/classes /app
 
-ENTRYPOINT ["java", "-cp", "app:app/lib/*", "pl.edu.pg.rsww.auth.AuthApplicationKt"]
+ENTRYPOINT ["java", "-cp", "app:app/lib/*", "pl.edu.pg.rsww.tripreservations.TripReservationsApplicationKt"]
 
 HEALTHCHECK CMD exit 0
