--- a/compose.dev.yaml
+++ b/compose.dev.yaml
@@ -5,6 +5,8 @@ services:
         - path: ./static/html
           action: sync
           target: /data/www
+    depends_on:
+      - api-gateway
   api-gateway:
     develop:
       watch:
@@ -25,3 +27,10 @@ services:
   auth:
     env_file:
       - ./dev.env
+  trip-reservations:
+    env_file:
+      - ./dev.env
+  transports:
+    env_file:
+      - ./dev.env
+
