Base implementation of real-time changes from TO

--- a/api_gateway/src/main/resources/application.properties
+++ b/api_gateway/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # comma-separated list of services
-serviceQueues=price_calculator,trip_reservations,auth, tour_offers
+serviceQueues=price_calculator,trip_reservations,auth,tour_offers,tour_operator
 
 spring.application.name=api_gateway
 
