Implement real-time changes from TO (#73)
* Add multiplier to price calculation

* Base implementation of real-time changes from TO

* Frontend showing recent changes

* Add multiplier changes to tour operator and special trip

* Reload recent changes more often

* style

* gpg fix

* close the client

* close the client 2

* Multiplier real-time change

* Add all missing closes that remain

--- a/api_gateway/src/main/resources/application.properties
+++ b/api_gateway/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # comma-separated list of services
-serviceQueues=price_calculator,trip_reservations,auth,tour_offers,status
+serviceQueues=price_calculator,trip_reservations,auth,tour_offers,tour_operator,status
 
 spring.application.name=api_gateway
 
