Add missing production configuration

--- a/default.env
+++ b/default.env
@@ -1,7 +1,13 @@
 POSTGRES_DB=rsww_184529
+POSTGRES_HOST=student-swarm01.maas
+POSTGRES_HOSTB=student-swarm01.maas
 POSTGRES_PASSWORD=student
+POSTGRES_PORTB=5432
 POSTGRES_USERNAME=postgres
 
 MONGO_DB=rsww_184529
+MONGO_HOST=student-swarm01.maas
+MONGO_HOSTB=student-swarm01.maas
 MONGO_PASSWORD=student
+MONGO_PORTB=27017
 MONGO_USERNAME=root
